[package]
name = "fetch_jira_tickets"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
dotenv = "0.15"
structopt = "0.3.26"
tokio = { version = "1.38.0", features = ["full"] }
prettytable = "0.10.0"
regex = "1.10.5"
base64 = "0.22.1"
jsonschema = "0.18"
comfy-table = "7.1.1"

[[bin]]
name = "fetch_jira_tickets"
path = "src/main.rs"
